--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.backlog.jp/*"],
-      "js": ["contentScript.js"],
+      "js": ["purify.min.js", "marked.min.js","contentScript.js"],
       "css": ["contentScript.css"]
     }
   ],
