Permit to run content script on .com domain

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "permissions": ["activeTab", "scripting", "storage", "tabs"],
   "content_scripts": [
     {
-      "matches": ["https://*.backlog.jp/*"],
+      "matches": ["https://*.backlog.jp/*", "https://*.backlog.com/*"],
       "js": ["lib/purify.min.js", "lib/marked.min.js","js/contentScript.js"],
       "css": ["style/contentScript.css"],
       "all_frames": true 
